@@ -7,4 +7,5 @@ lib_LIBRARIES = libwinstorecompat.a
 libwinstorecompat_a_SOURCES = \
   src/CreateEventW.c \
   src/CreateMutexW.c \
-  src/CreateSemaphoreW.c
+  src/CreateSemaphoreW.c \
+  src/InitializeCriticalSection.c
